manifests/apps/media/mylar3/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mylar3
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - comics.frias.app
      secretName: comics-frias-app-tls
  rules:
    - host: comics.frias.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mylar3-svc
                port:
                  number: 8090
